welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:2: error: a is already defined as value a
  																							case (a,a,a) => return 20
                                                                                                                                                                                                ^greenTicket:2: error: a is already defined as value a
  																							case (a,a,a) => return 20
                                                                                                                                                                                                  ^greenTicket:3: error: a is already defined as value a
  																							case (a,_,a) => return 10
                                                                                                                                                                                                  ^greenTicket:4: error: a is already defined as value a
                                                case (a,a,_) => return 10
                                                        ^greenTicket:5: error: b is already defined as value b
  																							case (_,b,b) => return 10
                                                                                                                                                                                                  ^greenTicket:6: error: missing parameter type
  (_,_,_) => 0}
   ^greenTicket:6: error: missing parameter type
  (_,_,_) => 0}
     ^greenTicket:6: error: missing parameter type
  (_,_,_) => 0}
       ^